Create basic view

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -1,10 +1,9 @@
 html, body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  font-family: Arial, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "Osaka", "メイリオ", "Meiryo", "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  font-family: NotoSansJP-Regular;
   padding: 0;
   margin: 0;
   font-size: 16px;
-  line-height: 18px;
   // color: #fafafa;
   // background-color: #141414;
   p {
