Create basic UI

--- a/app/assets/stylesheets/mixin/fonts.scss
+++ b/app/assets/stylesheets/mixin/fonts.scss
@@ -15,6 +15,10 @@
   src: font-url('NotoSansJP-Regular');
 }
 @font-face{
+  font-family: "NotoSansJP-Medium";
+  src: font-url('NotoSansJP-Medium');
+}
+@font-face{
   font-family: "NotoSansJP-Thin";
   src: font-url('NotoSansJP-Thin');
 }
