--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -4,4 +4,8 @@
   margin: 20px auto;
   text-align: center;
   letter-spacing: -2px;
+  @media (max-width: 760px) {
+    font-size: 30px;
+    margin: 10px auto;
+  }
 }
