--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%= javascript_pack_tag 'application' %>
   </head>
 
-  <body>
+  <body ontouchstart="">
     <%= render 'shared/header' %>
     <%= yield %>
   </body>
